posts/1cddd0e1-fe60-4bd7-981d-35fac5ac1aab/contents/namespace.yaml
apiVersion: v1
kind: Namespace
metadata:
  labels:
    app.kubernetes.io/instance: $NAMESPACE
    app.kubernetes.io/name: $NAMESPACE
  name: $NAMESPACE
