posts/1cddd0e1-fe60-4bd7-981d-35fac5ac1aab/contents/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: $NAMESPACE
  namespace: $NAMESPACE
spec:
  ports:
    - port: 12000
      targetPort: 12000
  selector:
    eventsource-name: $NAMESPACE
