posts/1cddd0e1-fe60-4bd7-981d-35fac5ac1aab/contents/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  annotations:
    cert-manager.io/issuer: letsencrypt
    kubernetes.io/ingress.class: nginx
  name: $NAMESPACE
  namespace: $NAMESPACE
spec:
  rules:
    - host: your.webhook.domain.com
      http:
        paths:
          - backend:
              service:
                name: $NAMESPACE
                port:
                  number: 12000
            path: /
            pathType: Prefix
  tls:
    - hosts:
        - your.webhook.domain.com
      secretName: letsencrypt-tls
